# Fan-TestKit-ESP32

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  sdkconfig.defaults
.claude/rules/: architecture-deep.md  build-and-toolchain.md  hardware-and-board.md  pwm-mcpwm.md  subsystems.md
components/app_api/include/: app_api.h
components/gpio_io/: CMakeLists.txt  gpio_io.c
components/gpio_io/include/: gpio_io.h
components/ip_announcer/: CMakeLists.txt  Kconfig  ip_announcer.c  ip_announcer_priv.h  ip_announcer_push.c
components/net_dashboard/: CMakeLists.txt  captive_portal.c  dns_hijack.c  dns_hijack.h  net_dashboard.c  provisioning.c  ws_handler.c
components/net_dashboard/web/: app.css  app.js  index.html  setup.html  success.html
components/psu_driver/: psu_driver.c  psu_modbus_rtu.c  psu_wz5005.c
components/psu_driver/include/: psu_backend.h  psu_driver.h  psu_modbus_rtu.h
components/psu_modbus/: psu_modbus.c
components/psu_modbus/include/: psu_modbus.h
components/pwm_gen/: pwm_gen.c
components/pwm_gen/include/: pwm_gen.h
components/rpm_cap/: CMakeLists.txt  rpm_cap.c
components/rpm_cap/include/: rpm_cap.h
components/usb_composite/: CMakeLists.txt  usb_cdc_task.c  usb_composite.c  usb_descriptors.c  usb_hid_task.c
components/usb_composite/include/: usb_protocol.h
docs/: Power_Supply_Module.md  first-time-setup.md
docs/superpowers/plans/: 2026-04-22-pwm-1hz-floor.md  2026-04-22-softap-captive-portal.md  2026-04-25-dashboard-help.md  2026-04-25-psu-modbus-rtu.md  2026-04-26-ip-announcer-ntfy.md
docs/superpowers/specs/: 2026-04-22-pwm-1hz-floor-design.md  2026-04-25-dashboard-help-design.md  2026-04-25-gpio-io-and-power-switch-design.md  2026-04-25-psu-modbus-rtu-design.md  2026-04-26-ip-announcer-ntfy-design.md  2026-04-26-psu-multi-driver-design.md
hardware/eagle-library/: README.md  YD-ESP32-S3.lbr  generate_eagle.py
hardware/eagle-library/Imported YD-ESP32-S3.PrjPcb/: YD-ESP32-S3.IntLib  YD-ESP32-S3.LibPkg  YD-ESP32-S3.PCBLIB  YD-ESP32-S3.PrjPcb  YD-ESP32-S3.SCHLIB
hardware/easyeda-library/: README.md  YD-ESP32-S3-COREBOARD.footprint.json  YD-ESP32-S3-COREBOARD.symbol.json  generate_lib.py
hardware/kicad-library/: README.md  YD-ESP32-S3.kicad_sym  fp-lib-table  generate_kicad.py  sym-lib-table
hardware/kicad-library/YD-ESP32-S3.pretty/: YD-ESP32-S3-COREBOARD.kicad_mod
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  control_task.c  idf_component.yml
